--- a/.github/workflows/azure-deploymend.yml
+++ b/.github/workflows/azure-deploymend.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  PYTHON_VERSION: '3.11' # set this to the python version to use
+  PYTHON_VERSION: '3.13' # set this to the python version to use
 
 jobs:
   build:
@@ -73,3 +73,26 @@ jobs:
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C0D73DD15A374164B80C5E1D694D85E7 }}
           scm-do-build-during-deployment: true
           enable-oryx-build: true
+
+  test_api:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+
+      - name: Setup Python version
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Start virtual environment
+        run: |
+          source venv/bin/activate
+      
+      - name: Run Unit Tests
+        env:
+          BASE_URL: ${{ secrets.AZURE_BASE_URL }}
+          CLIENT_ID: ${{ secrets.OS_DATAHUB_CLIENT_ID }}
+        run: |
+          pip install requests==2.32.4
+          pip install python-dotenv==1.1.1
+          python -m unittest unit_tests
