--- a/.github/workflows/azure-deploymend.yml
+++ b/.github/workflows/azure-deploymend.yml
@@ -7,7 +7,7 @@ name: Build and deploy Python project to Azure Function App - catalyst-ngd-wrapp
 on:
   push:
     branches:
-      - 'main'
+      - main
   workflow_dispatch:
 
 env:
