--- a/.github/workflows/azure-deploymend.yml
+++ b/.github/workflows/azure-deploymend.yml
@@ -32,7 +32,9 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
       # Optional: Add step to run tests here
 
@@ -96,6 +98,7 @@ jobs:
           BASE_URL: ${{ secrets.AZURE_BASE_URL }}
           CLIENT_ID: ${{ secrets.OS_DATAHUB_CLIENT_ID }}
         run: |
+          pip install --upgrade pip
           pip install requests==2.32.4
           pip install python-dotenv==1.1.1
           python -m unittest unit_tests
