--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -24,3 +24,13 @@ jobs:
         with:
           name: azure-function-release
           path: azure_function_release/
+
+      - name: Upload asset to release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./release.zip
+          asset_name: release.zip
+          asset_content_type: application/zip
