--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Create release zip
         run: |
           cd azure_function_release
-          zip -r ../${{ github.event.release.tag_name }}-release.zip .
+          zip -r ../release.zip .
           cd ..
 
       - name: Upload assets to release
@@ -37,6 +37,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ github.event.release.tag_name }}-release.zip
-          asset_name: ${{ github.event.release.tag_name }}-release.zip
+          asset_path: release.zip
+          asset_name: release.zip
           asset_content_type: application/zip
